	names (defaults to empty vector).  If empty, then it traverses all
	categories in PORTDIR (like before). Otherwise, it uses the package
	list to get the results.
	* src/action_find_handler.cc, src/action_which_handler.cc: Updated to
	use pkgcache_T.  We can pass a pkgcache_T object to the find_package
	suite of functions since it ultimately derives from std::vector.

2005-06-06 Aaron Walker <ka0ttic@gentoo.org>

	* lib/file.hh: Comment out code referring to blksize_t and blkcount_t
	since they're a GNUism (causing build to fail on BSD). None of
	herdstat's code uses it anyways, so there's not really any point in
	having it.

2005-06-05 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc6).
	* lib/regex.hh: Added operator=.
	* src/herdstat.cc, src/formatter.cc, src/formatter.hh:
	formatter_T::attrs_T::highlights is now a map, so we can allow setting
	a different color for each word.  Added a plural version of
	formatter_T::add_highlight() for passing a vector of string in the
	format of 'word,color', which gets inserted into the highlights map.
	* src/action_find_handler.cc, src/action_find_handler.hh: Updated so
	that --find --metadata will show metadata of the results of the
	--find.

2005-06-04 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: define SYSCONFDIR.
	* src/Makefile.am, src/fetcher.cc, src/fetcher.hh: Moved fetching code
	into it's own class, fetcher_T.
	* src/herdstat.cc, src/metacache.cc, src/querycache.cc,
	src/options.cc, src/rc.cc, src/rc.hh: Added configuration file support. 
	herdstat will first read /etc/herdstatrc if it exists and
	$HOME/.herdstatrc if it exists.  Options defined in the latter will
	override options defined in the former.
	* src/devaway.cc, src/herds_xml.cc, src/herds_xml_handler.cc: Updated
	to use fetcher_T.
	* lib/portage_version.cc, lib/string.cc, lib/string.hh: Moved strtoul
	and strtouint wrappers in with rest of string utility functions.
	* doc/herdstat.1.in: Added CONFIGURATION section.